--- a/Moview_UIKit/Base.lproj/Main.storyboard
+++ b/Moview_UIKit/Base.lproj/Main.storyboard
@@ -60,7 +60,6 @@
                                 </prototypes>
                             </tableView>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemPinkColor" red="1" green="0.1764705882" blue="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="T9g-Z4-6il" firstAttribute="leading" secondItem="aPu-xh-IKo" secondAttribute="leading" id="JOL-Rk-WIO"/>
                             <constraint firstItem="T9g-Z4-6il" firstAttribute="top" secondItem="aPu-xh-IKo" secondAttribute="top" id="SDY-v6-k1P"/>
@@ -85,7 +84,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="0ic-0G-Wuw">
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="0ic-0G-Wuw">
                                 <rect key="frame" x="16" y="60" width="382" height="786"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="O7f-Jb-oUZ">
@@ -113,6 +112,36 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BE2-yf-DQ3" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1750.7246376811595" y="133.92857142857142"/>
+        </scene>
+        <!--Movie Detail View Controller-->
+        <scene sceneID="5Nj-td-0cw">
+            <objects>
+                <viewController storyboardIdentifier="MovieDetailViewController" id="YTB-KT-h6G" customClass="MovieDetailViewController" customModule="Moview_UIKit" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="xkm-nW-FMC">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="tEh-PV-ZEC">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="Ipz-6Q-SAg" firstAttribute="bottom" secondItem="tEh-PV-ZEC" secondAttribute="bottom" id="1Wb-PI-7bj"/>
+                            <constraint firstItem="Ipz-6Q-SAg" firstAttribute="trailing" secondItem="tEh-PV-ZEC" secondAttribute="trailing" id="K9F-hi-3rY"/>
+                            <constraint firstItem="tEh-PV-ZEC" firstAttribute="top" secondItem="Ipz-6Q-SAg" secondAttribute="top" id="MR8-YL-Bm2"/>
+                            <constraint firstItem="tEh-PV-ZEC" firstAttribute="leading" secondItem="Ipz-6Q-SAg" secondAttribute="leading" id="Tbo-xY-YfG"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="Ipz-6Q-SAg"/>
+                    </view>
+                    <connections>
+                        <outlet property="tableView" destination="tEh-PV-ZEC" id="UvP-CT-ggV"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ZpR-Qn-wl0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2556" y="141"/>
         </scene>
     </scenes>
 </document>
