--- a/Moview_UIKit/Base.lproj/Main.storyboard
+++ b/Moview_UIKit/Base.lproj/Main.storyboard
@@ -3,124 +3,6 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <scenes>
-        <!--Discover View Controller-->
-        <scene sceneID="cJA-f8-Kvh">
-            <objects>
-                <viewController storyboardIdentifier="DiscoverViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="zrV-O5-XKr" customClass="DiscoverViewController" customModule="Moview_UIKit" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8Re-5u-lwS">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="T9g-Z4-6il">
-                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
-                                <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" textLabel="phG-Xi-mKH" style="IBUITableViewCellStyleDefault" id="KKm-AZ-WkE">
-                                        <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="KKm-AZ-WkE" id="x2c-u1-HFX">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="phG-Xi-mKH">
-                                                    <rect key="frame" x="20" y="0.0" width="374" height="43.5"/>
-                                                    <autoresizingMask key="autoresizingMask"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                            </subviews>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                </prototypes>
-                            </tableView>
-                        </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <constraints>
-                            <constraint firstItem="T9g-Z4-6il" firstAttribute="leading" secondItem="aPu-xh-IKo" secondAttribute="leading" id="JOL-Rk-WIO"/>
-                            <constraint firstItem="T9g-Z4-6il" firstAttribute="top" secondItem="aPu-xh-IKo" secondAttribute="top" id="SDY-v6-k1P"/>
-                            <constraint firstItem="aPu-xh-IKo" firstAttribute="bottom" secondItem="T9g-Z4-6il" secondAttribute="bottom" id="dVn-WC-AgU"/>
-                            <constraint firstItem="aPu-xh-IKo" firstAttribute="trailing" secondItem="T9g-Z4-6il" secondAttribute="trailing" id="wFH-xx-4b1"/>
-                        </constraints>
-                        <viewLayoutGuide key="safeArea" id="aPu-xh-IKo"/>
-                    </view>
-                    <connections>
-                        <outlet property="tableView" destination="T9g-Z4-6il" id="CLd-Np-jSB"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Xcf-Nu-hze" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="953.62318840579712" y="133.92857142857142"/>
-        </scene>
-        <!--Genre List View Controller-->
-        <scene sceneID="87L-2O-V0C">
-            <objects>
-                <viewController storyboardIdentifier="GenreListViewController" id="OLF-Jv-wlw" customClass="GenreListViewController" customModule="Moview_UIKit" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="5Uy-Ea-27a">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="0ic-0G-Wuw">
-                                <rect key="frame" x="16" y="60" width="382" height="786"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="O7f-Jb-oUZ">
-                                    <size key="itemSize" width="128" height="128"/>
-                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                </collectionViewFlowLayout>
-                                <cells/>
-                            </collectionView>
-                        </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <constraints>
-                            <constraint firstItem="0ic-0G-Wuw" firstAttribute="leading" secondItem="E9P-nV-PgM" secondAttribute="leading" constant="16" id="5qu-RE-YaI"/>
-                            <constraint firstItem="E9P-nV-PgM" firstAttribute="trailing" secondItem="0ic-0G-Wuw" secondAttribute="trailing" constant="16" id="8MM-2t-1uf"/>
-                            <constraint firstItem="0ic-0G-Wuw" firstAttribute="top" secondItem="E9P-nV-PgM" secondAttribute="top" constant="16" id="ehL-h7-qcf"/>
-                            <constraint firstItem="E9P-nV-PgM" firstAttribute="bottom" secondItem="0ic-0G-Wuw" secondAttribute="bottom" constant="16" id="yo3-t4-Ymi"/>
-                        </constraints>
-                        <viewLayoutGuide key="safeArea" id="E9P-nV-PgM"/>
-                    </view>
-                    <connections>
-                        <outlet property="collectionView" destination="0ic-0G-Wuw" id="0J9-gh-inb"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="BE2-yf-DQ3" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1750.7246376811595" y="133.92857142857142"/>
-        </scene>
-        <!--Movie Detail View Controller-->
-        <scene sceneID="5Nj-td-0cw">
-            <objects>
-                <viewController storyboardIdentifier="MovieDetailViewController" id="YTB-KT-h6G" customClass="MovieDetailViewController" customModule="Moview_UIKit" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="xkm-nW-FMC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="tEh-PV-ZEC">
-                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                            </tableView>
-                        </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <constraints>
-                            <constraint firstItem="Ipz-6Q-SAg" firstAttribute="bottom" secondItem="tEh-PV-ZEC" secondAttribute="bottom" id="1Wb-PI-7bj"/>
-                            <constraint firstItem="Ipz-6Q-SAg" firstAttribute="trailing" secondItem="tEh-PV-ZEC" secondAttribute="trailing" id="K9F-hi-3rY"/>
-                            <constraint firstItem="tEh-PV-ZEC" firstAttribute="top" secondItem="Ipz-6Q-SAg" secondAttribute="top" id="MR8-YL-Bm2"/>
-                            <constraint firstItem="tEh-PV-ZEC" firstAttribute="leading" secondItem="Ipz-6Q-SAg" secondAttribute="leading" id="Tbo-xY-YfG"/>
-                        </constraints>
-                        <viewLayoutGuide key="safeArea" id="Ipz-6Q-SAg"/>
-                    </view>
-                    <connections>
-                        <outlet property="tableView" destination="tEh-PV-ZEC" id="UvP-CT-ggV"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="ZpR-Qn-wl0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2556" y="141"/>
-        </scene>
-    </scenes>
+    <scenes/>
 </document>
